# ansible-role-kind

./: .gitignore  .yamllint  Makefile  README.md  devbox.json  pyproject.toml  requirements.yml
.github/workflows/: lint.yml  main.yml  molecule.yml  release.yml
defaults/: main.yml
meta/: main.yml
molecule/common/: cleanup.yml  converge.yml  destroy.yml  prepare.yml  verify.yml
molecule/common/vars/: registry.yml
molecule/default/: converge.yml  destroy.yml  molecule.yml  verify.yml
molecule/registry/: molecule.yml
molecule/singlenode/: molecule.yml
tasks/: main.yml
