[tool.poetry]
name = "nephelaiio.kind"
version = "0.1.0"
description = ""
authors = ["nephelaiio"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.5.0", markers = "platform_system != 'Windows'" }
ansible = "^9.3.0"
netaddr = "^1.2.1"
yamllint = "^1.35.1"
docker = "^7.0.0"
molecule = "^24.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
