[tool.poetry]
name = "nephelaiio.kind"
version = "0.1.0"
description = ""
authors = ["nephelaiio"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
molecule-plugins = { extras = ["docker"], version = "^23.7.0" }
ansible = "^11.4.0"
molecule = "^25.3.1"
ansible-lint = "^25.1.3"
yamllint = "^1.37.0"
netaddr = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
